
.. _version-4.7.1:

What's New in 4.7.1
-------------------

The 4.7.1 driver patches a bug that affects
Client-Side Field Level Encryption and Queryable Encryption.
The bug can cause data corruption when rotating :ref:`Data Encryption Keys <csfle-key-architecture>`
(DEKs) encrypted with a :ref:`Customer Master Key <csfle-key-architecture>`
hosted on Google Cloud Key Management Service or Azure
Key Vault. The bug was present in version 4.7.0 of the driver 
in the ``RewrapManyDataKey`` method and causes the
loss of your DEKs.

.. important:: Back Up your Key Vault Collection

   Always back up your :ref:`Key Vault Collection <csfle-reference-key-vault>`
   before you rotate your DEKs. If you lose your DEKs, you lose access to all
   the data encrypted with those keys.

.. _version-4.7:

What's New in 4.7
-----------------

New features of the 4.7 driver release include:

- Added full support for MongoDB 6.0.

- Added the following change stream support improvements:

  - Enhanced pre-image and post-image support for :ref:`change streams <java-usage-watch>`.
    Change stream watch helpers now accept ``whenAvailable`` and ``required``
    for the ``fullDocument`` option. See the :manual:`change stream </changeStreams/#change-streams-with-document-pre--and-post-images>`
    reference documentation for more information.
  - Added a new ``fullDocumentBeforeChange`` option, which accepts
    ``whenAvailable`` and ``required``.
  - Change events now include a ``fullDocumentBeforeChange``  field
    when configured for display on your MongoDB collection.
  - Added ``showExpandedEvents`` support for change streams.
  - Added ``wallTime`` support to the ``ChangeStreamDocument`` class.

- Added :ref:`clustered index <java-clustered-indexes>` creation support.
- Support for new features related to :ref:`qe-manual-feature-qe`,
  including support for automatic encryption (MongoDB v6.0 Enterprise or later
  is required) and manual encryption.
