@@ -8,6 +8,7 @@ Data Formats
 - :doc:`/fundamentals/data-formats/document-data-format-extended-json`
 - :doc:`/fundamentals/data-formats/documents`
 - :doc:`/fundamentals/data-formats/document-data-format-pojo`
+- :doc:`/fundamentals/data-formats/document-data-format-record`
 - :doc:`/fundamentals/data-formats/pojo-customization`
 - :doc:`/fundamentals/data-formats/codecs`
 
@@ -18,6 +19,7 @@ Data Formats
    /fundamentals/data-formats/document-data-format-extended-json
    /fundamentals/data-formats/documents
    /fundamentals/data-formats/document-data-format-pojo
+   /fundamentals/data-formats/document-data-format-record
    /fundamentals/data-formats/pojo-customization
    /fundamentals/data-formats/codecs
 
