@@ -1,3 +1,5 @@
+.. _fundamentals-codecs:
+
 ======
 Codecs
 ======
@@ -32,7 +34,7 @@ sections:
 - :ref:`CodecProvider <codecs-codecprovider>`
 - :ref:`Custom Codec Example <codecs-custom-example>`
 
-If you are customizing encoding and decoding logic for Plain old Java objects
+If you are customizing encoding and decoding logic for plain old Java objects
 (POJOs), read our guide on :doc:`POJO Customization </fundamentals/data-formats/pojo-customization>`.
 
 .. _codecs-codec:
