@@ -32,7 +32,7 @@ Client-Side Field Level Encryption and Queryable Encryption.
 The bug can cause data corruption when rotating :ref:`Data Encryption Keys <csfle-key-architecture>`
 (DEKs) encrypted with a :ref:`Customer Master Key <csfle-key-architecture>`
 hosted on Google Cloud Key Management Service or Azure
-Key Vault. The bug was present in version 4.7.0 of the driver 
+Key Vault. The bug was present in version 4.7.0 of the driver
 in the ``RewrapManyDataKey`` method and causes the
 loss of your DEKs.
 
@@ -117,7 +117,8 @@ New features of the 4.6 Java driver release include:
   and the `DnsClientProvider <https://mongodb.github.io/mongo-java-driver/4.6/apidocs/mongodb-driver-core/com/mongodb/spi/dns/DnsClientProvider.html>`__
   interface API documentation for more information.
 - Added driver support for encoding and decoding between `Java records <https://docs.oracle.com/en/java/javase/17/language/records.html>`__
-  and BSON documents, which is enabled by default.
+  and BSON documents, which is enabled by default. See :ref:`<fundamentals-records>`
+  for more information.
 
 .. _version-4.5:
 
